Added base and rover commands

--- a/Grader Test APP v2.0/Form1.resx
+++ b/Grader Test APP v2.0/Form1.resx
@@ -118,6 +118,106 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/4QAiRXhpZgAATU0AKgAAAAgAAQESAAMAAAABAAEAAAAAAAD/4gHY
+        SUNDX1BST0ZJTEUAAQEAAAHIAAAAAAQwAABtbnRyUkdCIFhZWiAH4AABAAEAAAAAAABhY3NwAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAA9tYAAQAAAADTLQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlkZXNjAAAA8AAAACRyWFlaAAABFAAAABRnWFlaAAABKAAA
+        ABRiWFlaAAABPAAAABR3dHB0AAABUAAAABRyVFJDAAABZAAAAChnVFJDAAABZAAAAChiVFJDAAABZAAA
+        AChjcHJ0AAABjAAAADxtbHVjAAAAAAAAAAEAAAAMZW5VUwAAAAgAAAAcAHMAUgBHAEJYWVogAAAAAAAA
+        b6IAADj1AAADkFhZWiAAAAAAAABimQAAt4UAABjaWFlaIAAAAAAAACSgAAAPhAAAts9YWVogAAAAAAAA
+        9tYAAQAAAADTLXBhcmEAAAAAAAQAAAACZmYAAPKnAAANWQAAE9AAAApbAAAAAAAAAABtbHVjAAAAAAAA
+        AAEAAAAMZW5VUwAAACAAAAAcAEcAbwBvAGcAbABlACAASQBuAGMALgAgADIAMAAxADb/2wBDAAIBAQIB
+        AQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcGBwcICQsJCAgKCAcHCg0KCgsMDAwMBwkODw0MDgsMDAz/
+        2wBDAQICAgMDAwYDAwYMCAcIDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwM
+        DAwMDAwMDAz/wAARCAAxANQDASIAAhEBAxEB/8QAHwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL
+        /8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIhMUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkK
+        FhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKT
+        lJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3
+        +Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAEC
+        AxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAVYnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZH
+        SElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3
+        uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD9/KKK+WP+
+        CtH/AAVf8A/8El/2c28Y+K1bWPEGru9p4b8O28oS51q5C5PJz5cKAgySEHaCAAWZVIB9T0V/KJ4p/wCC
+        nP8AwUR/4LKeLdduPhvc+PbLwvYl2n0/wKj6RpOkRcttmvQykkLyTLMSeoAHFcTon7UH/BRL/gnT4I8P
+        /FB/F3xei8Ba2sV9Y6xqGoN4j8O6jG+Cm53aaEBumGKt+NAH9eNFfmX/AMEFv+DhrQv+CqVk/gDxxZad
+        4S+NOk2puDa2zFbHxJAg+ee1DElJFHLwkkgfMpKhgn6aUAFFfGv/AAWX/wCCyfhT/gjv8JPC2v614cu/
+        GWt+MNTex0/RbW+S0kaKOMvNcM7K2EQmJcbeTKvoaz/+CMH/AAWx8Jf8FjPBPjO80jwzdeCdf8E3kMN5
+        o91qCXkklvMhMVyrKifKWSRCNvBQc/MKAPtqivMP20v2lIf2Ov2UPiB8UrjSZteg8B6Lcay+nRTiB7wR
+        Lu8sOQQpPqQa/G//AIjh/C3/AEb5r/8A4VMP/wAj0Afu/RX4ZeFv+D37wBd6xDHrXwH8X2Ng7gSz2ev2
+        9zLGvciNoow303Cv1y/Yo/bf+HH/AAUE+AOm/En4Y64NZ8OagzQyCWMw3OnzpjzLe4jPMci5GRyCCGBK
+        kEgHrdFfkl/wUL/4O6vgx+yV8TdT8FfDrwzqfxh1vRpmtr7ULS+Sx0eGZTho45yrtOVOQSibMjhmr578
+        G/8AB7ZNpviKBPG/7Od7pulzYPmad4jLXAX+8qTW6K3/AH0PqKAP3xorwr/gnz/wUY+F3/BTP4ExePvh
+        drMl9YRzfZNR0+7jEOoaNcgZMNxFk7SRyrAlWHKseceF/wDBVL/g4H+B3/BKnXYvDHiJ9V8ZfEKeFbj/
+        AIRrQgjTWcTDKPcyuQkIYcqpy5HO3BBoA+6aK/COX/g+D8KmVvK/Z78RNHn5S3iiEEj3xb19B/8ABLr/
+        AIOidE/4KZftl+HvhBY/B7V/CVxr9teXI1OfXo7pIBb27zEGMQqTu2Y68ZoA/VmivkH/AIKj/wDBbT4K
+        f8EndK0+Dx9falrHi3WoTcad4Z0WJJ9QniBK+dJuZUhiLAgM7DcQdobBx+c2of8AB8F4PW8kFn+z94nl
+        twfkeXxNAjsPdRAwH5mgD916K+Bf+CK//BdbS/8AgsfrvxAstO+HOpeBD4Dgsp3e61VL4Xn2lplAAWNN
+        u3yvfO4Vl/8ABTz/AIOVPgN/wTR+JV14Duodd+IfxA05VOoaRoHlCLSmYbhHcXEjBUkwQdih2AI3AZFA
+        H6HVxP7QHx60X9nL4dv4h1qLUb0y3MOn6fpumwfaL/WL2ZwkFpbxZG+WRjgAkAAFmKqrMPxZf/g+D8Kl
+        22fs9+IimflJ8Uw5x/4D19ofszft5at/wVu/Y48DftDeCPh1f2d38L/iDNcyeEX1GO6utXtobSS2uPIk
+        KxobgRXrSRK2AzQ7dw3ggA9stP8AgodrPhDUbi6+IHw7tPDfhfT7yKx1nU9I8XWevzeE5ZW2x/2rbQqr
+        WybiA0iGVY85YhQXH0+rBlBBBB5BHevzE8JfCXQNQ8R/HSH4YWvjHxt4+/aIS+027g1rwjqGjWngSG+u
+        bh53up7hEiWKJJ95jAeaWaIBPlfC/pZ4S8Pr4T8K6ZpSTS3CaZaRWiyynLyiNAoZj6nGTQBoUUUUAFfy
+        4/8ABc3Utf8A+Cov/BxdpvwRGo3Fro+k6zpfgPTQTlLCOQRy3k6r03b5ZWz3EaDoBX9R1fy7/wDBdnRP
+        EH/BLX/g4j0f46x6ZcXui61q+meO9NydqX4hEUV7bK3QNujcc9BMh6EUAfbH/Bxz+2F4L/4JJf8ABOnw
+        1+yf8EbW08Mar45002k8NiwWbTdEHyTzSMOWnu3DRl25Yeec5xXj3/BpB/wUi0j4ieFPEf7HvxSFjrWi
+        6vBc3/hK21RFnt7qJwWvdMZHBDKRmZF/67+1cJ8c/wDgg7+0N/wXE+Kmr/tM6N8W/gp4g0L4kyi70pbf
+        V76RdHs1AWDTyPs2Y5II9sbocHeHJ5OTi+C/+DUf9qD9jjxdpvxVs/jB8FPBtz8PbmPXo9budYvYINNM
+        DCTzZHNqAEGPmzwQSO9AHzT/AMFFPgvP/wAENv8AguQ0nw6up7HSvCGuWHizw4ocs0VhcbZWtGJ5ZADN
+        Ac/eQc5ya/rv8N65D4n8O2Gp24YQajbR3MYYYIV1DDPvg1/IH+2N8YfEH/BeD/gtFpEXh3T7d7jxjqGl
+        +FrJbFne3FvbRpHcXaFwrCE7bi4G4BhGRkAg1/Sr/wAFg/20LT/gmR/wTF8beMrC4EGtWGlJ4e8Lqxy8
+        moTp5FuR6mMbpT7QtQB+NP7aOu/8P4/+DmHwx8LrVjq3wt+GGof2PdIjboJbHT3M+qSEj/ntMrQBh1Hl
+        VyH7MviCb/g38/4OUNY8F3rvpnwx8X6qdGbexWH+xdSdZbGb0xbymIMe3lSivEv+CQX7MH7emgaHqfxs
+        /Zf8M3TW/i5Z9Gn1+U6ZJJeLHMrzKgvCWA81RuZR8zJjJxTP+Cwv7Kf7eHi/wzZfGb9qXwpcSWPhaKHQ
+        01xBpiNbRyzM0SSCzO4r5rkBmBwXxkZoA/pD/wCC3Jz/AMEjP2hyOQfA+of+ijX5G/8ABnVrPwn0v4O/
+        HBfiTd/Dq2nfWdLNiPEstkkjL5Fxv8vz+dududvGcV9O/Df9vof8FCf+DVv4n+JNQvFuvF/hXwFqHhfx
+        LlgZGvLWBVWZh6zQmKXPq7elflp/wQF/4IP+Ef8AgsT4C+JGr+JfHviPwbN4Hv7Kzgj0yyhnW5WeOVyz
+        GQ8EeWAMetAH6k/8HIPiL9ja6/4JqeNIzN8Hbv4jyRQjwd/wjzWUmrre+dHyhtvnEWzfv3fJtyOpFfnJ
+        /wAEYv2hvF/7Lv8AwQ3/AG6vFmlXd3Y2TR6Ro+kTxkjydQvfMtJpIz2dYZomJHIwntX3N4d/4Mj/AIPW
+        WtW8uqfGX4j6hYRuDNbwWNnbvKvoJCr7frtNfT//AAUh/wCCUngz4T/8EGfix8EPgr4YOmWek6P/AG7a
+        WsbGa71S6tJorqSSWQ/NLNIsBXJ/2VAAAAAPzf8A+DNz/gnj4E+OfiP4jfGrxpoeneJL/wAEXltonh21
+        v7dZ7exuJIzLNdbGyplCeWqEg7dzkYOCP3L/AG2/2D/hz+3b+zx4i+H/AI28MaNqNrq9hLb2d09qn2nS
+        pyp8q4gkxujdHwwKnnGDkEg/iP8A8GX/AO3B4M+F2o/FX4O+Kde0vQdW8UXdnr2gC+uVgXUZEjeG4hjZ
+        iAZAohYLnJAbAODj9xv2z/20fAX7DP7O3iT4i+OfEOl6TpmiWMlxbxTXCibUpwp8q3gTO6SSR8KqqD1y
+        cAEgA/m7/wCDVn4+63+yX/wVY8V+A7i4lfSdf8O6zZ6pZqcJNc6ZHJdRyY/vKIJlB9JW9a89/wCCMHwT
+        sP8Agsn/AMFwX1b4vRt4j0zVrnU/HGu2Vw5ZNR8tt0Vs/rEJJIVK9DGm3pXoX/Bqz8CtY/ax/wCCs3in
+        x3c20o0jQfD+s3+q3Sj5IZ9TSS1jjz/eYTzMB6RN6VwH/BF/436X/wAEcP8AguLPpXxblbw5pOk3Oq+B
+        9bvbpSqabvbbFcv6RGSKIlugR93SgD90v2lP+CwH7C/7CXxn1f4U+M4dA8PeI/CPkwXWnWngZ5YLUPEk
+        qKrRQFCNjqflPGcV0H7EP/BZn9jr9sP9ovSfAfwivrKfx1qcFxNZrH4Rm09ikUTSS/vmhUL8itxnnpWV
+        8ev+Cef/AAT8/bR+LWqfEzxofhb4q8TeKTFNd6ovjjYLzZEkaHbFdBPuIg4Havxa/wCDd7w7pHhD/g4/
+        Gk+H0gj0HS9Q8VWmmpDL50a20cV0kQV8ncuwLhsnI5yaAPFP2jv2jPAf7X//AAXo8TeMv2gtV1G2+FX/
+        AAndzbar5aS3Dw6TYu8UFqqxguFdYY0OwZHmO3Xmv228F/8ABwH/AME1/h14Ys9F0J9C0nStPiWG3tbX
+        4dzxxxKBgAAW/wCvU1+J/wAU/wBn/wACfsdf8F+db8HftD6Q138LovH11Lq4n86KObSr15JLe63RkOY1
+        WaKQlD/Aw6giv3f8Pf8ABD7/AIJueLdEttS0vwt8OtQsLyNZYLiDxrPJHKjDIIIusEEUAei/AH/gsL+z
+        l8fv2fPjZ4x+Ak9pe3fwq8MT67qqR+HZNLDbYJ5IAd8abwWhYd8fjX84/wDwR1+Mv7Pg/wCCgGr/ABP/
+        AGwNTm1jRYILnWoLe70yfVIda1qadSGuI41bcqh5pMOCpYLnI4P9I3w0/wCCUX7Ofwq/Zt+Nng39n7Rv
+        D2iaj8UPC1zoepyadrcl/uL286W5ffLJsAeVj2zk1/Ol/wAEMvhV+z8//BQ3Wfhj+1voNjbaXfWlzolm
+        dav5tOg0jW4rhAI5pEdNhYJNHlyFDFQetAH7eWv/AAcX/wDBOmxto4YNQ0qGGJQqRp8PrhVQDoABb4Ar
+        7c/YD/a9+En7bfwFPjX4LTQz+DP7SnsN0WlPpq/aYwhk/dMino6fNjn8K+TI/wDghB/wTpmjV08GeAXR
+        hkMPGVwQR/4FV9gfsQfsu/CL9kT4KHwl8FNO0vS/Bh1Ca+MOn6i9/D9pkCCQ+Yzuc4RON3GBxQB7BRRR
+        QAUUUUAFfNH/AAVN/wCCWvw8/wCCrn7OkvgbxtHJp+pWDtd+H9ftUDXmhXRXG9M8PGwADxk4cAchgrD6
+        XooA/li1/wD4JG/8FF/+COnxB1aT4M3HjbVfD9y5b+1PAN4bu01FAcK09g2WD4A4eJsdmI5rn/Fn7KP/
+        AAU//wCCr1zaeGPHel/GHVdDMwLp4nI0HRYWH/LSSNhFG5HXhGb0Ff1e0UAfnD/wQp/4N9vC3/BJzRJv
+        GHia/sfGfxn1u1Ntc6rDERZ6HA2C1tZhhuO7A3zMAz4wAq5Dd3/wWe/4Iyy/8FidF8FaJqXxX1XwD4b8
+        HTXF6dOstFjvl1C7kVUWeRmlQjy0DKqgH/Wuc819x0UAeWfsSfsn6D+w1+yj4F+E/huaS60rwRpcdgt1
+        LGscl9JktLcOo4DSSM7kAnBbFT/tk/st6B+2v+y545+FXidpItG8b6VLpss8aB5LR2GYp0B4LxyKkgz3
+        QV6ZRQB+XH7F/wDwbSw/sbfs5/HT4XWXx01/XPC3xy8OHRb2Gbw7FD/ZlyMql7GBO25gjyKUOAwK5Pyi
+        vbP+CLn/AARd0r/gjh4R8eaTpXj/AFHx2njm8tLySS70tLA2ZgSRAAFkfdu8zPOMYr7booAKRlDqVYAg
+        jBB6GlooA/I3/goF/wAGhvwa/ar+KGq+Nfhx4r1X4P6zrMz3d3p1tYJf6O87HLPFCXjeDJySqOVBPCrX
+        gvhj/gyp1XxLr1sfiB+0pqWraTa8JFZaC7Thf7qPPcMqcf7LfSv3sooA8G/4J6f8E3/hZ/wTH+By+Bfh
+        do0llaXEwutT1G7k8/UNZuMY824lwMkDhVUBFGQqjJz4b/wVN/4N8PgX/wAFUPEC+KfEEWq+C/iEkSwN
+        4l0Eos17GoARbmJwUm2gABjhwMDdgAD7rooA/Cdv+DHjwaWO39oTxMBngHwrASP/ACZr6D/4Jef8Gunh
+        3/gmV+2R4f8Ai/p3xh1vxbc6Da3lsumXGgRWkc4uIHhJMizORtD5+7zjtX6q0UAfIn/BUT/gij8FP+Cs
+        Gh2T+P8ATr/SfFujwm303xPosiwajbRkk+U+5WSaLcSQjqcEkqVyc/nNef8ABj14Ie5c2/7QPiqKEn5V
+        k8MW8jAe7CdQfyFfupRQB8Ef8EW/+CE+jf8ABG7XPH97pPxG1Tx2fHkFlBIl3pEdiLMWzTMCCsj7t3nH
+        rjG2sn/gp7/wbXfAX/gpf8Q7nxzcyaz8OviDf7ft+s6AIzHqpAwHubdwUeTAA8xSjHA3FsCv0NooA/Ch
+        /wDgx48Gljt/aE8ThewPhWAn/wBKa/Tr/gkl/wAE0tP/AOCUf7J5+Fem+LbzxpbHWrrWf7RubBbJ8zrG
+        pj2K7jA8sc55zX07RQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRR
+        RQAUUUUAFFFFABRRRQAUUUUAf//Z
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAEBAAAAEAIABoBAAAZgAAACAgAAABACAAqBAAAM4EAAAwMAAAAQAgAKglAAB2FQAAQEAAAAEA
